; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_conf.c_giant_open.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_conf.c_giant_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cdev = type { i32 }
%struct.thread = type { i32 }
%struct.cdevsw = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.cdev*, i32, i32, %struct.thread*)* }

@ENXIO = common dso_local global i32 0, align 4
@Giant = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.cdev*, i32, i32, %struct.thread*)* @giant_open to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @giant_open(%struct.cdev* %0, i32 %1, i32 %2, %struct.thread* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.cdev*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.thread*, align 8
  %10 = alloca %struct.cdevsw*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store %struct.cdev* %0, %struct.cdev** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store %struct.thread* %3, %struct.thread** %9, align 8
  %13 = load %struct.cdev*, %struct.cdev** %6, align 8
  %14 = call %struct.cdevsw* @dev_refthread(%struct.cdev* %13, i32* %11)
  store %struct.cdevsw* %14, %struct.cdevsw** %10, align 8
  %15 = load %struct.cdevsw*, %struct.cdevsw** %10, align 8
  %16 = icmp eq %struct.cdevsw* %15, null
  br i1 %16, label %17, label %19

17:                                               ; preds = %4
  %18 = load i32, i32* @ENXIO, align 4
  store i32 %18, i32* %5, align 4
  br label %36

19:                                               ; preds = %4
  %20 = call i32 @mtx_lock(i32* @Giant)
  %21 = load %struct.cdevsw*, %struct.cdevsw** %10, align 8
  %22 = getelementptr inbounds %struct.cdevsw, %struct.cdevsw* %21, i32 0, i32 0
  %23 = load %struct.TYPE_2__*, %struct.TYPE_2__** %22, align 8
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  %25 = load i32 (%struct.cdev*, i32, i32, %struct.thread*)*, i32 (%struct.cdev*, i32, i32, %struct.thread*)** %24, align 8
  %26 = load %struct.cdev*, %struct.cdev** %6, align 8
  %27 = load i32, i32* %7, align 4
  %28 = load i32, i32* %8, align 4
  %29 = load %struct.thread*, %struct.thread** %9, align 8
  %30 = call i32 %25(%struct.cdev* %26, i32 %27, i32 %28, %struct.thread* %29)
  store i32 %30, i32* %12, align 4
  %31 = call i32 @mtx_unlock(i32* @Giant)
  %32 = load %struct.cdev*, %struct.cdev** %6, align 8
  %33 = load i32, i32* %11, align 4
  %34 = call i32 @dev_relthread(%struct.cdev* %32, i32 %33)
  %35 = load i32, i32* %12, align 4
  store i32 %35, i32* %5, align 4
  br label %36

36:                                               ; preds = %19, %17
  %37 = load i32, i32* %5, align 4
  ret i32 %37
}

declare dso_local %struct.cdevsw* @dev_refthread(%struct.cdev*, i32*) #1

declare dso_local i32 @mtx_lock(i32*) #1

declare dso_local i32 @mtx_unlock(i32*) #1

declare dso_local i32 @dev_relthread(%struct.cdev*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
